release: 2.5.0